--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </div>
         <div id="resultado"></div>
     </div>
-    <script src="/assets/js/main.js" defer></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
